testing/tests/melt/negative/lvalues_8.c

int main() 
{
    int n = 0;
    (n + 2) = 3; // Binary operators convert an lvalue to an rvalue.
    return 0;
}
